--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.0'
 services:
   grafana:
     user: root
-    container_name: 'sunker-cicd-datasource'
+    container_name: 'sunker-testpnpm-datasource'
 
     platform: 'linux/amd64'
     build:
@@ -13,20 +13,14 @@ services:
         grafana_version: ${GRAFANA_VERSION:-10.3.3}
     ports:
       - 3000:3000/tcp
-      - 2345:2345/tcp # delve
-    security_opt:
-      - 'apparmor:unconfined'
-      - 'seccomp:unconfined'
-    cap_add:
-      - SYS_PTRACE
     volumes:
-      - ./dist:/var/lib/grafana/plugins/sunker-cicd-datasource
+      - ./dist:/var/lib/grafana/plugins/sunker-testpnpm-datasource
       - ./provisioning:/etc/grafana/provisioning
-      - .:/root/sunker-cicd-datasource
+      - .:/root/sunker-testpnpm-datasource
 
     environment:
       NODE_ENV: development
-      GF_LOG_FILTERS: plugin.sunker-cicd-datasource:debug
+      GF_LOG_FILTERS: plugin.sunker-testpnpm-datasource:debug
       GF_LOG_LEVEL: debug
       GF_DATAPROXY_LOGGING: 1
-      GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: sunker-cicd-datasource
+      GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: sunker-testpnpm-datasource
