--- a/provisioning/datasources/datasources.yml
+++ b/provisioning/datasources/datasources.yml
@@ -1,8 +1,8 @@
 apiVersion: 1
 
 datasources:
-  - name: 'cicd'
-    type: 'sunker-cicd-datasource'
+  - name: 'testpnpm'
+    type: 'sunker-testpnpm-datasource'
     access: proxy
     isDefault: false
     orgId: 1
