--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -182,7 +182,7 @@ jobs:
           interval: 500
 
       - name: Install Playwright Browsers
-        run: pnpm playwright install chromium --with-deps
+        run: pnpm dlx playwright install chromium --with-deps
 
       - name: Run Playwright tests
         id: run-tests
